--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x android/gradlew
-        working-directory: ./android # Ensure this is where gradlew is
+        # working-directory: ./android # Ensure this is where gradlew is
 
       - name: Build Android Debug APK
         run: ./gradlew assembleDebug # Or assembleRelease if you set up signing
