--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           node-version: '20' # You can adjust this to match your Node.js version if needed
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin' # Or 'zulu', 'adopt', etc.
-          java-version: '17'    # Capacitor often requires JDK 17
+          java-version: '21'    # Capacitor often requires JDK 17
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
@@ -38,7 +38,7 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x android/gradlew
-        # working-directory: ./android # Ensure this is where gradlew is
+        working-directory: ./android # Ensure this is where gradlew is
 
       - name: Build Android Debug APK
         run: ./gradlew assembleDebug # Or assembleRelease if you set up signing
